Fix #671 Funding links should be visible on either light or dark themes
Fix #670 Ko-fi has working text

--- a/wowup-electron/src/app/components/funding-button/funding-button.component.scss
+++ b/wowup-electron/src/app/components/funding-button/funding-button.component.scss
@@ -15,6 +15,12 @@
       width: 20px;
       margin-right: 0.5em;
     }
+
+    .mat-icon {
+      height: 20px;
+      width: 20px;
+      margin-right: 0.5em;
+    }
   }
 
   &.small {
@@ -24,10 +30,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    &:hover {
-      background-color: $dark-3;
-    }
     .funding-icon {
+      height: 15px;
+      width: 15px;
+    }
+
+    .mat-icon {
       height: 15px;
       width: 15px;
     }
